--- a/ProjectDemo.API/appsettings.json
+++ b/ProjectDemo.API/appsettings.json
@@ -9,10 +9,15 @@
   "ConnectionStrings": {
     "DefaultConnection": "Server=127.0.0.1;Database=ProjectDemo;User Id=sa;Password=Password123!;Encrypt=False"
   },
-  "AzureAd": {
-    "Instance": "https://login.microsoftonline.com/",
-    "TenantId": "73bf9c05-bd27-4332-a610-bb1a50300369",
-    "ClientId": "8bfb425b-27ce-43b3-97c1-7a0fff23b38c",
-    "Audience": "api://8bfb425b-27ce-43b3-97c1-7a0fff23b38c"
+  "JwtSettings": {
+    "Issuer": "https://localhost:5000",
+    "Audience": "https://localhost:5000",
+    "Key": "kjfhdskjfh7432kdadkg__"
   }
+  //"AzureAd": {
+  //  "Instance": "https://login.microsoftonline.com/",
+  //  "TenantId": "73bf9c05-bd27-4332-a610-bb1a50300369",
+  //  "ClientId": "8bfb425b-27ce-43b3-97c1-7a0fff23b38c",
+  //  "Audience": "api://8bfb425b-27ce-43b3-97c1-7a0fff23b38c"
+  //}
 }
