--- a/ProjectDemo.UI/package.json
+++ b/ProjectDemo.UI/package.json
@@ -13,6 +13,7 @@
     "@types/node": "^16.18.126",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
+    "fetch": "^1.1.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-scripts": "5.0.1",
