reconfigured swagger support

--- a/ProjectDemo.API/appsettings.json
+++ b/ProjectDemo.API/appsettings.json
@@ -10,9 +10,9 @@
     "DefaultConnection": "Server=127.0.0.1;Database=ProjectDemo;User Id=sa;Password=Password123!;Encrypt=False"
   },
   "JwtSettings": {
-    "Issuer": "https://localhost:5000",
-    "Audience": "https://localhost:5000",
-    "Key": "kjfhdskjfh7432kdadkg__"
+    "Issuer": "https://localhost:7209",
+    "Audience": "https://localhost:7200",
+    "Key": "QWxhZGRpbpoisgTjpvcGVuIHNlc2FtZQ=="
   }
   //"AzureAd": {
   //  "Instance": "https://login.microsoftonline.com/",
