--- a/ProjectDemo.API/appsettings.json
+++ b/ProjectDemo.API/appsettings.json
@@ -13,11 +13,11 @@
     "Issuer": "https://localhost:7209",
     "Audience": "https://localhost:7200",
     "Key": "QWxhZGRpbpoisgTjpvcGVuIHNlc2FtZQ=="
+  },
+  "AzureAd": {
+    "Instance": "https://login.microsoftonline.com/",
+    "TenantId": "73bf9c05-bd27-4332-a610-bb1a50300369",
+    "ClientId": "8bfb425b-27ce-43b3-97c1-7a0fff23b38c",
+    "Audience": "api://8bfb425b-27ce-43b3-97c1-7a0fff23b38c"
   }
-  //"AzureAd": {
-  //  "Instance": "https://login.microsoftonline.com/",
-  //  "TenantId": "73bf9c05-bd27-4332-a610-bb1a50300369",
-  //  "ClientId": "8bfb425b-27ce-43b3-97c1-7a0fff23b38c",
-  //  "Audience": "api://8bfb425b-27ce-43b3-97c1-7a0fff23b38c"
-  //}
 }
