--- a/ProjectDemo.UI/package.json
+++ b/ProjectDemo.UI/package.json
@@ -5,6 +5,10 @@
   "dependencies": {
     "@azure/msal-browser": "^4.7.0",
     "@azure/msal-react": "^3.0.6",
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@mui/material": "^7.0.1",
+    "@mui/styled-engine-sc": "^7.0.1",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.2.0",
@@ -18,6 +22,7 @@
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.4.1",
     "react-scripts": "5.0.1",
+    "styled-components": "^6.1.17",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
