changed path in yml

--- a/.github/workflows/deploy-projectdemo-api.yml
+++ b/.github/workflows/deploy-projectdemo-api.yml
@@ -5,7 +5,7 @@ on:
     branches:
       - master
     paths:
-      - "ProjectDemo.Api/**"
+      - "ProjectDemo.API/**"
       - ".github/workflows/deploy-projectdemo-api.yml"
 
 jobs:
