--- a/ProjectDemo.API/appsettings.json
+++ b/ProjectDemo.API/appsettings.json
@@ -14,5 +14,9 @@
     "TenantId": "73bf9c05-bd27-4332-a610-bb1a50300369",
     "ClientId": "8bfb425b-27ce-43b3-97c1-7a0fff23b38c",
     "Audience": "api://8bfb425b-27ce-43b3-97c1-7a0fff23b38c"
+  },
+  "TimeOptions": {
+    "Enabled": true,
+    "Format": "yyyy-MM-dd HH:mm"
   }
 }
