--- a/ProjectDemo.API/Properties/launchSettings.json
+++ b/ProjectDemo.API/Properties/launchSettings.json
@@ -27,7 +27,7 @@
       "applicationUrl": "https://localhost:7200;http://localhost:5088",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development",
-        "KeyVault_Url": "https://projectdemo-local.vault.azure.net/"
+        "KeyVault__Url": "https://projectdemo-local.vault.azure.net/"
       }
     },
     "IIS Express": {
