added appinsights instrumentation key

--- a/ProjectDemo.API/appsettings.json
+++ b/ProjectDemo.API/appsettings.json
@@ -9,6 +9,9 @@
   "ConnectionStrings": {
     "DefaultConnection": "Server=127.0.0.1;Database=ProjectDemo;User Id=sa;Password=Password123!;Encrypt=False"
   },
+  "ApplicationInsights": {
+    "ConnectionString": "InstrumentationKey=d0f5754e-4b06-4d13-a61e-78b7baf34c1f;IngestionEndpoint=https://eastus-8.in.applicationinsights.azure.com/;LiveEndpoint=https://eastus.livediagnostics.monitor.azure.com/;ApplicationId=216cb555-6a68-45cd-8fc9-1e4c8f915d4c"
+  },
   "AzureAd": {
     "Instance": "https://login.microsoftonline.com/",
     "TenantId": "73bf9c05-bd27-4332-a610-bb1a50300369",
