configure app insights

--- a/ProjectDemo.API/appsettings.Development.json
+++ b/ProjectDemo.API/appsettings.Development.json
@@ -4,5 +4,8 @@
       "Default": "Information",
       "Microsoft": "Warning"
     }
+  },
+  "ApplicationInsights": {
+    "ConnectionString": "InstrumentationKey=d0f5754e-4b06-4d13-a61e-78b7baf34c1f;IngestionEndpoint=https://eastus-8.in.applicationinsights.azure.com/;LiveEndpoint=https://eastus.livediagnostics.monitor.azure.com/;ApplicationId=216cb555-6a68-45cd-8fc9-1e4c8f915d4c"
   }
 }
