--- a/.gitignore
+++ b/.gitignore
@@ -16,6 +16,9 @@
 # User-specific files (MonoDevelop/Xamarin Studio)
 *.userprefs
 
+# Local .terraform directories
+**/.terraform/*
+
 # Mono auto generated files
 mono_crash.*
 
