--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -1,4 +1,4 @@
-name: Export Azure Resources
+name: Export Azure Resources to Azure Containers
 on:
   schedule:
     - cron: "0 1 * * *" # Every night at 1 AM
@@ -17,7 +17,7 @@ jobs:
       - name: Login to Azure
         uses: azure/login@v1
         with:
-          creds: ${{ secrets.AZURE_API_CREDENTIALS }}
+          creds: ${{ secrets.AZURE_STORAGE_CREDENTIALS }}
 
       - name: Export Resource Group
         run: |
