--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -19,6 +19,11 @@ jobs:
         with:
           creds: ${{ secrets.AZURE_STORAGE_CREDENTIALS }}
 
+      - name: Install aztfexport
+        run: |
+          curl -sL https://aka.ms/aztfexport-install | bash
+          echo "$HOME/.aztfexport/bin" >> $GITHUB_PATH
+
       - name: Export Resource Group
         run: |
           aztfexport rg RG-ProjectDemo-Dev --output-dir ./terraform/dev --non-interactive
