--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -19,10 +19,15 @@ jobs:
         with:
           creds: ${{ secrets.AZURE_STORAGE_CREDENTIALS }}
 
+      - name: Set up Go
+        uses: actions/setup-go@v5
+        with:
+          go-version: "1.22"
+
       - name: Install aztfexport
         run: |
-          curl -sL https://aka.ms/aztfexport-install | bash
-          echo "$HOME/.aztfexport/bin" >> $GITHUB_PATH
+          go install github.com/Azure/aztfexport@latest
+          echo "${HOME}/go/bin" >> $GITHUB_PATH
 
       - name: Export Resource Group
         run: |
